--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,12 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": "./src", 
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./*"],
+      "@layouts": ["components/layouts"],
+      "@shared": ["components/shared-components"],
+      "@ui": ["components/ui"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
