--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "framer-motion": "^12.6.3",
     "material-icons": "^1.13.14",
     "next": "14.0.1",
